# count-app

./: LICENSE
backend/: Makefile  pyproject.toml
backend/counter_app/: main.py
backend/counter_app/database/: __init__.py  models.py
backend/counter_app/database/crud/: count.py  interactions.py
backend/counter_app/routers/: count.py  interactions.py
backend/counter_app/server/: dependencies.py
backend/counter_app/server/schemas/: __init__.py  count.py  interactions.py
backend/counter_app/utils/: constants.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  server.ts
frontend/src/api/: api.ts
